# Evaluation-of-LLM-Generated-Plans

./: .gitignore
plan_dataset_builder/: .gitignore  README.md  example_config.yaml  full_system_test_config.YAML  humanEval50_config.yaml  main_config.yaml  minimal_config.yaml  multi_model_smoke.yaml  pyproject.toml
plan_dataset_builder/full_dataset/full_system_merged_001/: merge_info.json
plan_dataset_builder/runs/20260223T235108Z/: runs.jsonl
plan_dataset_builder/runs/20260224T014923Z/: runs.jsonl
plan_dataset_builder/runs/20260224T014945Z/: runs.jsonl
plan_dataset_builder/runs/20260224T022457Z/: runs.jsonl
plan_dataset_builder/runs/humaneval50_batch_v1/: runs.jsonl
plan_dataset_builder/runs/humaneval50_batch_v2/: runs.jsonl
plan_dataset_builder/runs/minimal_001/: runs.jsonl
plan_dataset_builder/runs/minimal_002/: runs.jsonl
plan_dataset_builder/runs/minimal_sync_001/: runs.jsonl
plan_dataset_builder/runs/minimal_sync_003/: runs.jsonl
plan_dataset_builder/runs/minimal_sync_004/: runs.jsonl
plan_dataset_builder/runs/multi_model_smoke_001/: runs.jsonl
plan_dataset_builder/runs/multi_model_smoke_002/: runs.jsonl
plan_dataset_builder/scripts/: convert_refactorbench_to_jsonl.py
plan_dataset_builder/section_runs/: sections_manifest.json
plan_dataset_builder/tests/: test_config.py  test_failed_artifacts.py  test_labels.py  test_openai_api.py  test_plan_id.py  test_plan_record.py  test_plan_validation.py  test_refactorbench_converter.py  test_refactorbench_loader.py  test_sectioning.py  test_swebench_loader.py  test_task_text.py
(+162 files in other folders)
