[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-dataset-builder"
version = "0.1.0"
description = "Reproducible plan dataset production system for HumanEval, SWE-bench Verified, and RefactorBench Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
  "typer>=0.12,<1",
  "PyYAML>=6.0,<7",
  "datasets>=2.18,<4",
  "openai>=1.40.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
plan-dataset-builder = "plan_dataset_builder.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
